--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,14 +25,22 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v2
+      - name: Setup Nuget
+        uses: nuget/setup-nuget@v1
         with:
-          vs-version: '16'
+          nuget-api-key: ${{ secrets.NuGetAPIKey }}
+          nuget-version: '5.x'
+
+      - run: nuget restore '${{ env.solution }}'
+
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1.1.3
+        with:
+          vs-version: '16.8'
 
       - name: Build and Run unittests
         run: |
@@ -58,72 +66,93 @@ jobs:
           move msvc\${{ env.buildRelease }}\mp.pdb publish\debug\mp.pdb
 
       - name: Deploy artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3.1.1
         with:
           name: win32
           path: publish/*
 
   testdemos:
     name: 'Test demos'
-    runs-on: ubuntu-latest
-    container: rehldsorg/testdemos:latest
+    runs-on: ubuntu-20.04
+    container: s1lentq/testdemos:latest
     needs: [windows]
+
+    env:
+      WINEDEBUG: -all
+      WINEDLLOVERRIDES: mshtml=
 
     defaults:
       run:
         shell: bash
-        working-directory: /opt/HLDS
-
-    strategy:
-      fail-fast: false
-      matrix:
-        test: [
-          { file: 'cstrike-basic-1',    desc: 'CS: Testing jumping, scenarios, shooting etc' },
-        ]
+        working-directory: ../../../opt/HLDS
 
     steps:
       - name: Deploying windows artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: win32
 
-      - name: Setup dependencies
+      - name: Play demos
         run: |
           chown root ~
           rsync -a deps/regamedll/* .
           mv $GITHUB_WORKSPACE/tests/mp.dll cstrike/dlls/mp.dll
 
-      - name: Play test
-        env:
-          demo: ${{ matrix.test.file }}
-          desc: ${{ matrix.test.desc }}
-        run: ./runTest.sh
+          descs=(
+            "CS: Testing jumping, scenarios, shooting etc"
+          )
+
+          demos=(
+            "cstrike-basic-1"
+          )
+
+          retVal=0
+          for i in "${!demos[@]}"; do
+            params=$(cat "testdemos/${demos[i]}.params")
+
+            echo -e "\e[1m[$((i + 1))/${#demos[@]}] \e[1;36m${descs[i]} testing...\e[0m"
+            echo -e "    - \e[0;33mParameters $params\e[0m"
+
+            wine hlds.exe --rehlds-enable-all-hooks --rehlds-test-play "testdemos/${demos[i]}.bin" $params &> result.log || retVal=$?
+
+            if [ $retVal -ne 777 ] && [ $retVal -ne 9 ]; then
+              # Print with catchy messages
+              while read line; do
+                echo -e "      \e[0;33m$line"
+              done <<< $(cat result.log | sed '0,/demo failed/I!d;/wine:/d;/./,$!d')
+
+              echo "      🔸  🔸  🔸  🔸  🔸  🔸  🔸  🔸  🔸  🔸"
+              while read line; do
+                echo -e "      \e[1;31m$line";
+              done < rehlds_demo_error.txt
+              echo -e "      \e[30;41mExit code: $retVal\e[0m"
+              echo -e "\e[1m[$((i + 1))/${#demos[@]}] \e[1;36m${descs[i]} testing...\e[1;31m Failed ❌"
+              exit 6 # Test demo failed
+            else
+              # Print result HLDS console
+              while read line; do
+                echo -e "      \e[0;33m$line"
+              done <<< $(cat result.log | sed '/wine:/d;/./,$!d')
+              echo -e "      \e[30;43mExit code: $retVal\e[0m"
+              echo -e "\e[1m[$((i + 1))/${#demos[@]}] \e[1;36m${descs[i]} testing...\e[1;32m Succeed ✔"
+            fi
+          done
 
   linux:
     name: 'Linux'
-    runs-on: ubuntu-latest
-    container: debian:11-slim
+    runs-on: ubuntu-20.04
+    container: s1lentq/linux86buildtools:latest
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Install dependencies
-        run: |
-          dpkg --add-architecture i386
-          apt-get update
-          apt-get install -y \
-            gcc-multilib g++-multilib \
-            build-essential \
-            libc6-dev libc6-dev-i386 \
-            git cmake rsync \
-            g++ gcc
+          submodules: true
 
       - name: Build and Run unittests
         run: |
-          rm -rf build && CC=gcc CXX=g++ cmake -DCMAKE_BUILD_TYPE=Unittests -B build && cmake --build build -j8
+          rm -rf build && CC=icc CXX=icpc cmake -DCMAKE_BUILD_TYPE=Unittests -B build && cmake --build build -j8
           retVal=0
           ./build/regamedll/cs 2> /dev/null > result.log || retVal=$?
           while read line; do
@@ -144,9 +173,17 @@ jobs:
           fi
         shell: bash
 
-      - name: Build using GCC Compiler
+      - name: Build using Intel C++ Compiler 19.0 (only for release)
+        if: |
+          github.event_name == 'release' &&
+          github.event.action == 'published' &&
+          startsWith(github.ref, 'refs/tags/')
         run: |
-          rm -rf build && CC=gcc CXX=g++ cmake -B build && cmake --build build -j8
+          rm -rf build-icc && CC=icc CXX=icpc cmake -B build-icc && cmake --build build-icc -j8
+
+      - name: Build using GCC Compiler 9.3
+        run: |
+          rm -rf build-gcc && CC=gcc CXX=g++ cmake -B build-gcc && cmake --build build-gcc -j8
 
       - name: Prepare CSSDK
         run: |
@@ -156,7 +193,8 @@ jobs:
       - name: Move files
         run: |
           mkdir -p publish/bin/linux32/cstrike/dlls
-          mv build/regamedll/cs.so publish/bin/linux32/cstrike/dlls/cs.so 2>/dev/null || true
+          mv build-icc/regamedll/cs.so publish/bin/linux32/cstrike/dlls/cs.so 2>/dev/null || true
+          mv build-gcc/regamedll/cs.so publish/cs-gcc.so
           mv regamedll/version/appversion.h publish/appversion.h
           mv dist/ publish/
 
@@ -164,6 +202,7 @@ jobs:
         run: |
           binaries=(
             "publish/bin/linux32/cstrike/dlls/cs.so"
+            "publish/cs-gcc.so"
           )
           bash ./regamedll/version/glibc_test.sh ${binaries[@]}
           if [[ $? -ne 0 ]]; then
@@ -172,25 +211,31 @@ jobs:
         shell: bash
 
       - name: Deploy artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3.1.1
         id: upload-job
         with:
           name: linux32
           path: publish/*
 
+      - name: Cleanup temporary artifacts
+        if: success() && steps.upload-job.outcome == 'success'
+        run: |
+          rm -rf cssdk
+          rm -f appversion.h
+
   publish:
     name: 'Publish'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [windows, testdemos, linux]
 
     steps:
       - name: Deploying linux artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: linux32
 
       - name: Deploying windows artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: win32
 
@@ -220,7 +265,7 @@ jobs:
           7z a -tzip regamedll-bin-${{ env.APP_VERSION }}.zip bin/ cssdk/
 
       - name: Publish artifacts
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@v1
         id: publish-job
         if: |
           startsWith(github.ref, 'refs/tags/') &&
@@ -231,3 +276,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.API_TOKEN }}
 
+      - name: Cleanup temporary artifacts
+        if: success() && steps.publish-job.outcome == 'success'
+        run: |
+          rm -rf bin dist debug cssdk
+          rm -f *.zip appversion.h
